@@ -6,6 +6,8 @@ Changes since 2.4.41:
 Lib/
 * added new SlapdObject methods _ln_schema_files() and
   _create_sub_dirs()
+* SlapdObject methods setup_rundir() and gen_config()
+  are now "public" methods
 * removed pseudo test script from module ldap.cidict
 
 Tests/
@@ -1473,4 +1475,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.455 2017/08/15 16:14:04 stroeder Exp $
+$Id: CHANGES,v 1.456 2017/08/16 13:29:05 stroeder Exp $
